<resources>
    <string name="app_name">Sales Agents Attendance</string>
    <string name="store_list">Store List</string>
    <string name="select_store_message">Select Store from the List Bellow</string>
    <string name="store_name">Store Name</string>
    <string name="store_address">Store Address</string>
    <string name="attendance">Attendance</string>
    <string name="submit_attendance_message">Submit Today\'s Attendance</string>
    <string name="name">Name</string>
    <string name="user_id">User ID</string>
    <string name="submit">Submit</string>
</resources>