<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AttendanceActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_max"
        android:layout_marginTop="@dimen/margin_max"
        android:layout_marginEnd="@dimen/margin_max"
        android:text="@string/attendance"
        android:textSize="@dimen/title_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_max"
        android:layout_marginEnd="@dimen/margin_max"
        android:text="@string/submit_attendance_message"
        android:textSize="@dimen/text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_max"
        android:layout_marginTop="@dimen/margin_max"
        android:layout_marginEnd="@dimen/margin_max"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="@dimen/sub_title_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userIdTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_max"
        android:layout_marginTop="@dimen/margin_mid"
        android:layout_marginEnd="@dimen/margin_max"
        android:hint="@string/user_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userIdTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="@dimen/sub_title_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        android:text="@string/submit"
        android:textSize="@dimen/sub_title_text" />
</LinearLayout>